# ocaml-binance

./: .gitignore  binance-bin.opam  binance-rest.opam  binance-ws.opam  binance.opam
rest/: dune  jbuild  rest.ml  rest.mli
src/: binance.ml  binance.mli  binance_rest.ml  binance_rest.mli  binance_ws.ml  binance_ws.mli  binance_ws_async.ml  binance_ws_async.mli  console.ml  dune  jbuild
test/: depth.ml  dune  jbuild  test.ml
ws/: console.ml  dune  jbuild  ws.ml  ws.mli
