opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-binance"
bug-reports: "https://github.com/vbmithr/ocaml-binance/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-binance"
doc: "https://vbmithr.github.io/ocaml-binance/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "dune" {>= "1.11.4"}
  "fixtypes" {= version}
  "binance" {= version}
  "sexplib" {>= "v0.12.0"}
  "fmt" {>= "0.8.8"}
  "ptime" {>= "0.8.5"}
  "ocplib-json-typed" {>= "0.7.1"}
  "yojson" {>= "1.7.0"}
]
synopsis: "Binance API"
description: """
"""
