(library
 (name        binance)
 (public_name binance)
 (preprocess (pps ppx_sexp_conv ppx_let))
 (modules Binance)
 (synopsis "Binance API types")
 (libraries fixtypes sexplib fmt ocplib-json-typed ptime yojson))

(library
 (name        binance_rest)
 (public_name binance-rest)
 (preprocess (pps ppx_sexp_conv ppx_let))
 (modules Binance_rest)
 (synopsis "REST API for Binance")
 (libraries logs-async binance core async fastrest yojson digestif.c hex))

(library
 (name        binance_ws)
 (public_name binance-ws)
 (preprocess (pps ppx_sexp_conv ppx_let))
 (synopsis "Binance Websocket API")
 (modules Binance_ws)
 (libraries fixtypes binance fmt))

(library
 (name        binance_ws_async)
 (public_name binance-ws-async)
 (preprocess (pps ppx_sexp_conv ppx_let))
 (synopsis "Binance Websocket API - Async")
 (modules Binance_ws_async)
 (libraries uri-sexp binance-ws logs-async fastws-async))

(executable
 (name        console)
 (public_name binance-console)
 (preprocess (pps ppx_sexp_conv ppx_let))
 (package      binance-ws)
 (modules Console)
 (libraries logs-async-reporter binance-ws-async))
