(executable
 (name        depth)
 (public_name binance-depth)
 (package     binance-ws)
 (modules     Depth)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   logs-async-reporter
   binance-ws-async
   binance-rest
   alcotest-async))

(test
 (name       test)
 (modules    test)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   logs-async-reporter
   binance-ws
   binance-rest
   alcotest-async))
