(executable
 (name        depth)
 (public_name binance-depth)
 (package     binance-bin)
 (modules     Depth)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   core
   async
   yojson
   fastws-async
   logs-async-reporter
   binance-ws
   binance-rest))

(test
 (name       test)
 (modules    test)
 (package binance-rest)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   binance-rest
   logs-async-reporter
   alcotest-async))
